cicd/woodpecker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker
